# frp-webui-5MB

./: .gitignore  CMakeLists.txt  frp.cpp  frp.h  frp.hpp  fs.hpp  main.cpp  package-lock.json  package.json  readme.md  user.hpp  webui.h  webuiconf.h
controller/: CMakeLists.txt  EntryController.cpp  LoginController.cpp  PortListController.cpp  StaticWebPageController.cpp  framework7-framework7-bundle.min.css.cpp  framework7-framework7-bundle.min.js.cpp  index.css.cpp  index.js.cpp  readme.md
controller/auto-generated/: framework7-framework7-bundle.min.css.cpp  framework7-framework7-bundle.min.js.cpp  index.css.cpp  index.js.cpp  sha256.js.cpp
data/: Generate-Assets.py
data/html/: error.html  index.html  index.js  readme.md  sha256.js
httpserver/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  HTTPServer.cpp  HTTPServer.h  http-server.h  httpserver-private.h
processor/: CMakeLists.txt  ContentGenerator.cpp  ContentGenerator.h  RequestProcessTask.cpp  RequestProcessTask.h  RequestProcessWorker.cpp  RequestProcessWorker.h  RequestProcessorManager.cpp  RequestProcessorManager.h  processor-private.h  processor.h
processor/templates/: TemplateResponseData.cpp  TemplateResponseData.h  ViewTemplatePrototypes.cpp  ViewTemplatePrototypes.h  htmltags-for-editor-only.h
processor/templates/framework7/: Framework7Document.hpp
utils/: BinaryResponseData.cpp  BinaryResponseData.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  FileReader.cpp  FileResponseData.cpp  FileResponseData.h  INI.cpp  INI.h  RedirectResponse.cpp  RedirectResponse.h  RequestData.cpp  RequestData.h  ResponseData.cpp  ResponseData.h  TextResponseData.cpp  TextResponseData.h  strop.cpp  strop.h  utils-private.h  utils.h
view/: LoginView.cpp  index.cpp  view.h
